Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:

MBDyn 1.5.6
	Enhancements:
		- added explicit cast to math parser
		- added loads fade-in in module-aerodyn
		  (Jens van Schelve, Patrick Rix)
		- added "drivep" (derivative) function to model namespace
		- added measures in aircraft instruments
		- added axial constitutive law wrapper
		- added simple gear joint (Eduardo Okabe)
		- added kinetic energy in automatic structural element
		  private data
		- added "postponed" drive caller capability
		- added max time step as drive (Reinhard Resch)
		- added min/max drive caller (Reinhard Resch)
		- added output of drive callers (Reinhard Resch)
		- added tracing of drive callers (Reinhard Resch)
		- added improved scaling (Reinhard Resch)
		- added support for automatic differentiation (Reinhard Resch)
		- improved step size control (Reinhard Resch)
		- improved hydrodynamic plain bearing (Reinhard Resch)
		- improved module-octave (Reinhard Resch)
		- added check for symmetry of inertia tensor
		- added several modules by Eduardo Okabe (module-fab-*/)
		- added algebraic equations scaling (Reinhard Resch)
		- added support for octave 3.8.1 (Reinhard Resch)
		- more joints with NetCDF support (Louis Gagnon)
		- added output of electric nodes (Eduardo Okabe)
		- added check for finite test (Reinhard Resch)
	Backward compatibility issues:
		- "overwrite" option of "setenv" changed
		- incompatible module-aerodyn syntax change
		- reference systems of aircraft instruments changed
		- reworked orientation description within node input
		  according to documentation (was inconsistent)
	Known issues:
		- Schur solver is broken